<resources>
    <string name="app_name">Temel Komutlar Unite-3</string>
    <string name="uyg1_name">Uygulama 1 (Mantıksal Veri Tipi)</string>
    <string name="uyg2_name">Uygulama 2 (Tam Sayılar)</string>
    <string name="uyg3_name">Uygulama 3 (Char Veri Tipi)</string>
    <string name="uyg4_name">Uygulama 4 (ASCII Kodunu Bulma)</string>
    <string name="uyg5_name">Uygulama 5 (Ondalık Veri Tipleri)</string>
    <string name="uyg6_name">Uygulama 6 (Sabit Veri Tipleri Pi Ve Yarıçap Bulma)</string>
    <string name="uyg7_name">Uygulama 7 (Aritmetik Operatörler)</string>
    <string name="uyg8_name">Uygulama 8 (Atama Operatörleri)</string>
    <string name="uyg9_name">Uygulama 9 (Karşılaştırma Operatörleri)</string>
    <string name="uyg10_name">Uygulama 10 (Mantıksal Operatörler)</string>
    <string name="geri_don">Geri Dön</string>
    <string name="long1">Long</string>
    <string name="int1">İnt</string>
    <string name="short1">Short</string>
    <string name="byte1">Byte</string>
    <string name="char_veri_tipini_test_et">Char Veri Tipini Test Et</string>
    <string name="ascii_kodunu_test_et">ASCII Kodunu Test Et</string>
    <string name="ondalikli_sayiyi_test_et">Ondalıklı Sayıyı Test Et</string>
    <string name="calistir">Çalıştır</string>
    <string name="calistirildi">Çalıştırıldı</string>
    <string name="say_1">Sayı 1</string>
    <string name="say_2">Sayı 2</string>
    <string name="Cikart_Ata">Çıkart ve ata operatörü</string>
    <string name="Basit_Atama">Basit atama operatörü</string>
    <string name="Bol_Ata">Böl ve ata operatörü</string>
    <string name="Topla_Ata">Topla ve ata operatörü</string>
    <string name="Carp_Ata">Çarp ve ata operatörü</string>
    <string name="Mod_Ata">Mod al ve ata operatörü</string>
    <string name="uyg12_name">Uygulama 12 (Try Catch)</string>
    <string name="uyg11_name">Uygulama 11 (Hata Ayıklama)</string>
    <string name="bir_ifade_giriniz">Bir ifade giriniz</string>
    <string name="ifadegiriniz">İfade Giriniz</string>
</resources>