<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnCalistir_11"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:text="@string/calistir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEdit11"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnGeridon_11"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:text="@string/geri_don"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalistir_11"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/txtEdit11"
        android:layout_width="384dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/say_1"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.018"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>